backlog:
- Double check for Mplayer existence and font generation (useful for latest Sherpya's revisions)
- Ability to shutdown DLNAorgPN automatic support for a given renderer (see DLNAOrgPN attribute in the renderer conf file)
- Some hack stuff for mpeg2 remux on Bravia TVs
- RAW generation fixed
- Custom mencoder quality settings for a given renderer